--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "knplabs/knp-menu-bundle": ">1.0,<2.1",
         "white-october/pagerfanta-bundle": "1.0.*@dev",
         "twig/twig": ">= 1.9.0",
-        "twig/extensions": "1.0.*"
+        "twig/extensions": "1.0.*",
+        "friendsofsymfony/jsrouting-bundle": "~1.1"
     },
     "require-dev": {
         "doctrine/common": ">=2.2.3,<2.5-dev",
